rancher/rancher-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rancher
  namespace: cattle-system
spec:
  gateways:
  - istio-system/extra-gateway
  - istio-system/main-gateway
  hosts:
    - prod-rancher.xxx.com
    - prod-rancher.xxx.net
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rancher.cattle-system.svc.cluster.local
        port:
          number: 80
